fixed drawer cutoff issue

--- a/polyball/client/hudcomponents/_drawer.scss
+++ b/polyball/client/hudcomponents/_drawer.scss
@@ -12,7 +12,8 @@
 
   .drawer.active {
     width: 16em !important;
-    left: 60%;
+    left: initial;
+    right: 10%;
     -webkit-transition: all 2s ease 0s;
     -moz-transition: all 2s ease 0s;
     -o-transition: all 2s ease 0s;
